--- a/app/package.json
+++ b/app/package.json
@@ -6,10 +6,17 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Nguyen Quang Huy",
   "dependencies": {
-    "axios": "^0.21.1",
-    "express": "^4.17.1",
-    "multer": "^1.4.2"
-  }
+    "axios": "^1.5.0",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.2",
+    "form-data": "^4.0.0",
+    "multer": "^1.4.5",
+    "request": "^2.88.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "author": "Nguyen Quang Huy",
+  "license": "ISC"
 }
