--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "multer": "^1.4.5",
+    "multer": "^1.4.5-lts.1",
     "request": "^2.88.2"
   },
   "engines": {
